--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,10 @@ body {
 }
 
 .app {
+  background-color: black;
   background-image: url('./assets/cold-bg.jpg');
-  background-size: cover;
-  background-position: bottom;
+  background-size: 420px;
+  background-position: center;
   background-repeat: no-repeat;
   transition: 0.4 ease;
 }
@@ -48,6 +49,7 @@ main {
   display: block;
   width: 80%;
   padding: 15px;
+  max-width: 340px;
 
   appearance: none;
   background: none;
@@ -70,8 +72,9 @@ main {
 
 .location-box .location{
   color: #fff;
-  font-size: 32px;
-  font-weight: 500;
+  font-size: 48px;
+  font-weight: 700;
+  padding: 5px;
   text-align: center;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
@@ -86,6 +89,7 @@ main {
 }
 
 .weather-box{
+  padding-top: 7vh;
   text-align: center;
 }
 
@@ -99,7 +103,7 @@ main {
   padding: 15px 25px;
 
   color: #FFF;
-  font-size: 102px;
+  font-size: 90px;
 
   
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
