--- a/src/index.css
+++ b/src/index.css
@@ -74,9 +74,13 @@ main {
   color: #fff;
   font-size: 48px;
   font-weight: 700;
+
   padding: 5px;
+
   text-align: center;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .location-box .date{
@@ -102,18 +106,39 @@ main {
 
   padding: 15px 25px;
 
-  color: #FFF;
+  color: #FFFF;
   font-size: 90px;
 
   
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   text-align: center;
+
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .weather-box .weather{
   color: #FFF;
+  
   font-size: 48px;
   font-weight: 700;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
 }
+
+.weathericon{
+  position: relative;
+  display: inline-block;
+  margin: 20px auto;
+
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 16px;
+
+  padding: 10px 15px;
+
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+  text-align: center;
+
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+}
+
