Custom Icons Added

--- a/src/index.css
+++ b/src/index.css
@@ -72,8 +72,8 @@ main {
 
 
 .location-box .location{
-  color: #fff;
-  font-size: 48px;
+  color: #ffff;
+  font-size: 45px;
   font-weight: 700;
 
   padding: 5px;
