--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ main {
 
 
 .location-box .location{
-  color: #ffff;
+  color: #fff;
   font-size: 45px;
   font-weight: 700;
 
@@ -81,16 +81,18 @@ main {
   text-align: center;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .location-box .date{
   color: #FFF;
+
   font-size: 20px;
   font-weight: 300;
   font-style: italic;
+
   text-align: center;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+
 }
 
 .weather-box{
